--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,6 +2,8 @@
 
 <p><%= @project.description %></p>
 <p>Goal: <%= number_to_currency(@project.goal) %></p>
+<p>Amount Raised: <%= number_to_currency(@project.pledges.sum(:dollar_amount)) %> </p>
+<p>Amount Left: <%= number_to_currency(@project.goal - @project.pledges.sum(:dollar_amount)) %> </p>
 <p>Fundraising starts: <%= @project.start_date.strftime("%A %b %d %Y") %></p>
 <p>Deadline: <%= @project.end_date.strftime("%A %b %d %Y") %></p>
 
@@ -10,7 +12,7 @@
 <% end %>
 
 <h2>Rewards</h2>
-<% @project.rewards.each do |reward| %> 
+<% @project.rewards.each do |reward| %>
   <p><%= number_to_currency(reward.dollar_amount) %></p>
   <p><%= reward.description %></p>
 
