--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,9 @@
 <h3><%= "Hello #{@user.first_name}" %></h3>
+
+<% @projects.each do |project| %>
+
+  <%= project.title %>
+  <%= project.goal %>
+  <%= project.end_date %>
+
+<% end %>
