Fix formatting on user show page of projects

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,8 @@
 
 <% @user.projects.each do |project| %>
 
-  <%= project.title %>
-  <%= project.goal %>
-  <%= project.end_date %>
+  <%= project.title %><br />
+  <%= project.goal %><br />
+  <%= project.end_date %><br />
 
 <% end %>
