--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,6 +4,9 @@
     <p>Title:
       <%= text_field_tag :title, params[:title] %> </p>
 
+    <p>Description:
+      <%= text_field_tag :description, params[:description] %> </p>
+
       <%= submit_tag "Search", :name => nil %>
   <% end %>
 
