--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,15 +15,15 @@
     <header class="site-header">
       <h1 class="logo"><%= link_to "CrowdFunder", root_path %></h1>
 
-      <nav class="site-nav">
+      <div id="site-nav"><nav class="site-nav">
         <% if current_user %>
-          <%= link_to "Logout", :logout, method: :post %>
+          <%= link_to "Logout", :logout, method: :post %> |
           <%= link_to "My Profile", user_path(current_user) %>
         <% else %>
           <%= link_to "Register", new_user_path %> |
           <%= link_to "Login", :login %>
         <% end %>
-      </nav>
+      </nav></div>
     </header>
 
     <% flash.each do |key, message| %>
@@ -35,7 +35,6 @@
     </main>
 
     <footer class="site-footer">
-      <small>A Bitmaker assignment</small>
     </footer>
   </body>
 </html>
