--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Sign up?</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', root_path %>
+<div id="sign_up">
+<div id="form">
+  <%= render 'form' %>
+</div>
+</div>
