--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the projects controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 .project {
   text-align: center;
   margin-bottom: 1rem;
@@ -19,4 +15,20 @@
 
 .project-days-left {
   font-size: 0.75em;
+}
+
+#search_bar {
+  background-color: lightgrey;
+  position: fixed;
+  padding: 15px;
+  width: 20%;
+  height: 100%;
+  left: 0px;
+  top: 5%;
+  border-right: 7px solid cadetblue;
+}
+
+article {
+  width: 80%;
+  float: right;
 }
