--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,22 +1,25 @@
+<div id="search_bar">
+
   <%= form_tag projects_path, :method => 'get' do %>
     <br>
     <p>Search Projects</p>
 
-    <p>Title:
-    <%= text_field_tag :title, params[:title] %> </p>
+    <p>Title: </p>
+    <%= text_field_tag :title, params[:title] %>
 
-    <p>Description:
-    <%= text_field_tag :description, params[:description] %> </p>
+    <p>Description: </p>
+    <%= text_field_tag :description, params[:description] %>
 
-    <p>Goal More Than:
-    <%= number_field_tag :goal_more, params[:goal_more] %> </p>
+    <p>Goal More Than: </p>
+    <%= number_field_tag :goal_more, params[:goal_more] %>
 
-    <p>Goal Less Than:
-    <%= number_field_tag :goal_less, params[:goal_less] %> </p>
+    <p>Goal Less Than: </p>
+    <%= number_field_tag :goal_less, params[:goal_less] %>
 
     <%= submit_tag "Search", :name => nil %>
   <% end %>
 
+</div>
 <% @found_projects.each do |project| %>
   <article class="project">
     <%= link_to project, class: 'project-link' do %>
