--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,18 +1,24 @@
+<div id="project_details">
 <h1><%= @project.title %></h1>
 
 <p><%= @project.description %></p>
-<p>Goal: <%= number_to_currency(@project.goal) %></p>
-<p>Amount Raised: <%= number_to_currency(@project.pledges.sum(:dollar_amount)) %> </p>
-<p>Amount Left: <%= number_to_currency(@project.goal - @project.pledges.sum(:dollar_amount)) %> </p>
-<p>Fundraising starts: <%= @project.start_date.strftime("%A %b %d %Y") %></p>
-<p>Deadline: <%= @project.end_date.strftime("%A %b %d %Y") %></p>
-
+<br>
+<br>
 <% if @project.image.present? %>
   <%= image_tag @project.image %>
 <% end %>
 
+<div id="goals">
+<p class="goal">Goal: </p><p><%= number_to_currency(@project.goal) %></p>
+<p class="goal">Amount Raised: </p><p><%= number_to_currency(@project.pledges.sum(:dollar_amount)) %> </p>
+<p class="goal">Amount Left: </p><p><%= number_to_currency(@project.goal - @project.pledges.sum(:dollar_amount)) %> </p>
+<p class="goal">Fundraising starts: </p><p><%= @project.start_date.strftime("%A %b %d %Y") %></p>
+<p class="goal">Deadline: </p><p><%= @project.end_date.strftime("%A %b %d %Y") %></p>
+</div>
+
 <h2>Rewards</h2>
 <% @project.rewards.each do |reward| %>
+<div id="reward">
   <p><%= number_to_currency(reward.dollar_amount) %></p>
   <p><%= reward.description %></p>
 
@@ -20,5 +26,7 @@
     <%= f.number_field :dollar_amount, value: reward.dollar_amount, step: 0.01 %>
     <%= f.submit "Pledge" %>
   <% end %>
-
+</div>
 <% end %>
+
+</div>
