--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,6 +14,7 @@
 <p class="goal">Amount Left: </p><p><%= number_to_currency(@project.goal - @project.pledges.sum(:dollar_amount)) %> </p>
 <p class="goal">Fundraising starts: </p><p><%= @project.start_date.strftime("%A %b %d %Y") %></p>
 <p class="goal">Deadline: </p><p><%= @project.end_date.strftime("%A %b %d %Y") %></p>
+<p class="goal" id="time_left"><%= @project.time_left %> to fund this project</p>
 </div>
 
 <h2>Rewards</h2>
