--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,11 +14,17 @@
 <p class="goal">Amount Left: </p><p><%= number_to_currency(@project.goal - @project.pledges.sum(:dollar_amount)) %> </p>
 <p class="goal">Fundraising starts: </p><p><%= @project.start_date.strftime("%A %b %d %Y") %></p>
 <p class="goal">Deadline: </p><p><%= @project.end_date.strftime("%A %b %d %Y") %></p>
-<% if @project.expired? %>
-  <p class="goal" id="time_expired"><%= @project.time_left %></p>
+
+<% if @project.expired? || @project.start_date > Time.now %>
+  <% if @project.expired? %>
+    <p class="goal" id="time_expired"><%= @project.time_left %>
+  <% else %>
+    <p class="goal" id="time_left">HASNT STARTED<%= @project.start_date %>
+  <% end %>
 <% else %>
-  <p class="goal"><%= @project.time_left %> to fund this project</p>
+  <p class="goal" id="time_left"><%= @project.time_left %> to fund this project
 <% end %>
+</p>
 
 </div>
 
