--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,12 @@
       <nav class="site-nav">
         <% if current_user %>
           <%= link_to "Logout", :logout, method: :post %>
+          <%= link_to "New Project", new_project_path %>
         <% else %>
           <%= link_to "Register", new_user_path %> |
           <%= link_to "Login", :login %>
         <% end %>
+
       </nav>
     </header>
 
