--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -10,7 +10,20 @@
 <% end %>
 
 <h2>Rewards</h2>
-<% @project.rewards.each do |reward| %> 
+
+  <% if @pledge.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@pledge.errors.count, "error") %> prohibited this project from being saved:</h2>
+
+    <ul>
+    <% @pledge.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
+<% @project.rewards.each do |reward| %>
   <p><%= number_to_currency(reward.dollar_amount) %></p>
   <p><%= reward.description %></p>
 
