--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,11 @@
 <h1><%= @project.title %></h1>
+<% if @project.owner != current_user %>
 
+<%= form_for [@project, Pledge.new] do |f| %>
+<%= f.number_field :dollar_amount, value: @project.rewards.minimum(:dollar_amount), step: 0.01 %>
+<%= f.submit "Pledge" %>
+<% end %>
+<% end %>
 <% if @project.image.present? %>
   <%= image_tag @project.image %>
 <% end %>
@@ -8,11 +14,6 @@
 <p>Goal: <%= number_to_currency(@project.goal) %></p>
 <p>Fundraising starts: <%= @project.start_date.strftime("%A %b %d %Y") %></p>
 <p>Deadline: <%= @project.end_date.strftime("%A %b %d %Y") %></p>
-
-<%= form_for [@project, Pledge.new] do |f| %>
-  <%= f.number_field :dollar_amount, value: @project.rewards.minimum(:dollar_amount), step: 0.01 %>
-  <%= f.submit "Pledge" %>
-<% end %>
 
 <h2>Rewards</h2>
 <% @project.rewards.each do |reward| %>
