--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @project.title %></h1>
+<h3>By: <%=link_to @project.user.first_name, user_path(@project.user_id) %></h3>
 
 <% if @project.image.present? %>
   <%= image_tag @project.image %>
