--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
 	<div>
 		<h2>Owned</h2>
 		<%@projects.each do |project|%>
-			<h3><%= project.title%></h3>
+			<h3><%=link_to project.title, project_path(project.id)%></h3>
 			<p><%= project.description %></p>
 		<% end %>
 	</div>
