--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,6 +6,7 @@
 <% end %>
 
 <p><%= @project.description %></p>
+<p>Total Pledged: $<%= @total_pledged%></p>
 <p>Goal: <%= number_to_currency(@project.goal) %></p>
 <p>Fundraising starts: <%= @project.start_date.strftime("%A %b %d %Y") %></p>
 <p>Deadline: <%= @project.end_date.strftime("%A %b %d %Y") %></p>
