--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,11 +9,21 @@
 <p>Total Pledged: $<%= @total_pledged%></p>
 <p>Goal: <%= number_to_currency(@project.goal) %></p>
 <p>Fundraising starts: <%= @project.start_date.strftime("%A %b %d %Y") %></p>
+<% if @pledge_status %>
+  <p>You have already backed this project.</p>
+<% end %>
 <p>Deadline: <%= @project.end_date.strftime("%A %b %d %Y") %></p>
 
 <%= form_for [@project, Pledge.new] do |f| %>
   <%= f.number_field :dollar_amount, value: @project.rewards.minimum(:dollar_amount), step: 0.01 %>
   <%= f.submit "Pledge" %>
+<% end %>
+
+<% if @pledge_status%>
+  <h2>Who has pledged your project?</h2>
+  <% @pledges.each do |pledger|%>
+    <p><%= link_to pledger.user.first_name, user_path(pledger.id)%></p>
+  <% end %>
 <% end %>
 
 <h2>Rewards</h2>
