--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,9 +9,11 @@
 <p>Total Pledged: $<%= @total_pledged%></p>
 <p>Goal: <%= number_to_currency(@project.goal) %></p>
 <p>Fundraising starts: <%= @project.start_date.strftime("%A %b %d %Y") %></p>
+
 <% if @pledge_status %>
   <p>You have already backed this project.</p>
 <% end %>
+
 <p>Deadline: <%= @project.end_date.strftime("%A %b %d %Y") %></p>
 
 <%= form_for [@project, Pledge.new] do |f| %>
@@ -30,11 +32,13 @@
 <% @project.rewards.each do |reward| %>
   <p><%= number_to_currency(reward.dollar_amount) %></p>
   <p><%= reward.description %></p>
-
+  <p># available: <%= reward.amount%> | claimed: <%= reward.claimed %></p>
   <p>
+    <% if @pledge_status %>
     <small>
-      <%= link_to "Remove reward", project_reward_path(@project, reward), method: 'delete' %>
+      <%= link_to "Edit", edit_project_reward_path(@project, reward)%> | <%= link_to "Remove reward", project_reward_path(@project, reward), method: 'delete' %>
     </small>
+    <% end %>
   </p>
 <% end %>
 
