--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,9 @@
       <h1 class="logo">Crowdfunder</h1>
 
       <nav class="site-nav">
+        <%= link_to "HOME", root_path %> |
         <% if current_user %>
-          <%= link_to "Logout", :logout, method: :delete %>
+          <%= link_to "Logout", :logout, method: :delete %> |
           <%= link_to "Profile", user_path(current_user) %>
         <% else %>
           <%= link_to "Register", new_user_path %> |
