--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -7,5 +7,20 @@
   margin: 0;
   text-align: center;
   line-height: 50px;
-  font-size: 1.5rem;
+  font-size: 2rem;
+
 }
+.logo a {
+  text-decoration: none;
+  color: inherit;
+}
+  .logo a:hover {
+    color: #671fad;
+  }
+
+a {
+  color: inherit;
+}
+  a:hover{
+    color: #671fad;
+  }
