--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,14 @@
 
   <body>
     <header class="site-header">
-      <h1 class="logo">Crowdfunder</h1>
+      <h1 class="logo"><%= link_to "Crowdfunder", root_url %></h1>
 
       <nav class="site-nav">
         <% if current_user %>
-          <%= link_to "Logout", :logout, method: :delete %>
+          <p><%= link_to "Logout", :logout, method: :delete %> | <%= link_to "#{current_user.email}", user_path(current_user) %></p>
         <% else %>
-          <%= link_to "Register", new_user_path %> |
-          <%= link_to "Login", :login %>
+          <p><%= link_to "Register", new_user_path %> | <%= link_to "Login", :login %></p>
+
         <% end %>
       </nav>
     </header>
