--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @project.title %></h1>
-
+<p>Created by <%= link_to "#{@project.user.first_name} #{@project.user.last_name}", user_url(@project.user.id) %></p>
 <% if @project.image.present? %>
   <%= image_tag @project.image %>
 <% end %>
